src/main/metadata-excluded/objects/Interface__c.object
<CustomObject>
    <description>PMO: Interface specification for each of the integrations between Salesforce and external systems</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>iCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini-Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvayaCTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SocialHub</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <label>Target System</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>iCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini-Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvayaCTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SocialHub</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interface</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>